tests/type/errors/bad-use-conflict.xi
use bar

foo(x:int) : int {
    return x
}